      (The data is not corrupt; an internal check is detecting a problem
      reading from the repository.)
      (Martin Pool, Andrew Bennetts, Robert Collins, #234748)

    * Inserting a bundle which changes the contents of a file with no trailing
      end of line, causing a knit snapshot in a 'knits' repository will no longer
      cause KnitCorrupt. (Robert Collins)

    * Sanitize branch nick before using it as an attachment filename in
      ``bzr send``. (Lukáš Lalinský, #210218)

  IMPROVEMENTS:

    * Added the 'alias' command to set/unset and display aliases. (Tim Penhey)

    * ``added``, ``modified``, and ``unknowns`` behaviour made consistent (all three
      now quote paths where required). Added ``--null`` option to ``added`` and 
      ``modified`` (for null-separated unknowns, use ``ls --unknown --null``)
      (Adrian Wilkins)

  BUGFIXES:

    * ``bzr status`` was breaking if you merged the same revision twice.
      (John Arbash Meinel, #235407)

  DOCUMENTATION:

    * Added *Bazaar Zen* section to the User Guide. (Ian Clatworthy)

  TESTING:

    * Fix the test HTTPServer to be isolated from chdir calls made while it is
      running, allowing it to be used in blackbox tests. (Robert Collins)

  API CHANGES:

    * ``WorkingTree.set_parent_(ids/trees)`` will now filter out revisions
      which are in the ancestry of other revisions. So if you merge the same
      tree twice, or merge an ancestor of an existing merge, it will only
      record the newest. (If you merge a descendent, it will replace its
      ancestor). (John Arbash Meinel, #235407)

  INTERNALS:

    * Knit record serialisation is now stricter on what it will accept, to
      guard against potential internal bugs, or broken input. (Robert Collins)


bzr 1.6beta1 2008-06-02
-----------------------


Commands that work on the revision history such as push, pull, missing,
uncommit and log are now substantially faster.  This release adds a